--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend of the aplication",
   "main": "src/index.js",
   "scripts": {
-    "test": "yarn dev"
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/mrlmaia/semana-omnistack-11/issues"
   },
-  "homepage": "https://github.com/mrlmaia/semana-omnistack-11#readme"
+  "homepage": "https://github.com/mrlmaia/semana-omnistack-11#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
