--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/mrlmaia/semana-omnistack-11#readme",
   "dependencies": {
+    "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.20.13",
